config api call and mapper in frontend